REST API: add GET /v1/files/{file}/transactions
